Fix rating system from Fernando